--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <link href="main.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body id="text-body">
     <div id="container" class="container">
         <p><span id="text" class="typed-text"></span><span class="cursor">|</span></p>
     </div>
