--- a/main.html
+++ b/main.html
@@ -8,7 +8,11 @@
 </head>
 
 <body id="text-body">
+    <div class="treediv">
+        <img class="tree" id="tree" src="./images/tree0.png">
+    </div>
     <div id="container" class="container">
+
         <p><span id="text" class="typed-text"></span><span class="cursor">|</span></p>
     </div>
     <script src="main.js"></script>
